--- a/style/standard.css
+++ b/style/standard.css
@@ -4,6 +4,13 @@
   scroll-behavior: smooth;
 }
 
+.content {
+  /* display: flex;
+  flex-direction: column;
+  flex-wrap: wrap; */
+  max-width: 1920px;
+}
+
 a {
   text-decoration: none;
 }
