--- a/style/standard.css
+++ b/style/standard.css
@@ -1,13 +1,10 @@
 * {
   box-sizing: border-box;
-  margin: 0;
+  margin: 0 auto;
   scroll-behavior: smooth;
 }
 
 .content {
-  /* display: flex;
-  flex-direction: column;
-  flex-wrap: wrap; */
   max-width: 1920px;
 }
 
