--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
   background-image: url("/assets/img/background-img.jpg");
-  background-position: center calc(50% + 130px);
+  /* background-position: center calc(50% + 120px); */
   background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: top; 
   height: 100vh;
 }
 
@@ -34,6 +37,7 @@ body {
 .input-content {
   display: flex;
   align-items: center;
+  gap: 9px;
 }
 
 input {
@@ -49,8 +53,78 @@ input::placeholder {
   color: white;
 }
 
+/* .input-content img {
+  width: 27px;
+  filter: invert(1);
+} */
+
 .main-content {
   display: flex;
   flex-wrap: wrap;
-  padding-top: 4%;
+  padding: 20px 30px;
+  gap: 18px;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+}
+
+.btn-container button {
+  position: relative;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  padding-block: 0.5rem;
+  padding-inline: 1.25rem;
+  background-color: rgb(0 107 179);
+  border-radius: 9999px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffff;
+  gap: 10px;
+  font-weight: bold;
+  border: 3px solid #ffffff4d;
+  outline: none;
+  overflow: hidden;
+  font-size: 15px;
+}
+
+.btn-container button:hover {
+  transform: scale(1.05);
+  border-color: #fff9;
+}
+
+.btn-container button:hover:before {
+  animation: shine 1.5s ease-out infinite;
+}
+
+.btn-container button::before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 100%;
+  background-image: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0) 30%,
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0) 70%
+  );
+  top: 0;
+  left: -100px;
+  opacity: 0.6;
+}
+
+@keyframes shine {
+  0% {
+    left: -100px;
+  }
+
+  60% {
+    left: 100%;
+  }
+
+  to {
+    left: 100%;
+  }
 }
