--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 .headline {
   background-image: url("/assets/img/pikachu.png");
-  background-position-x: calc(50% - 26px);
+  background-position-x: calc(50% - 32px);
   background-position-y: calc(50% + 20px);
   background-size: cover;
   background-clip: text;
@@ -53,10 +53,10 @@ input::placeholder {
   color: white;
 }
 
-/* .input-content img {
+.input-content img {
   width: 27px;
   filter: invert(1);
-} */
+}
 
 .main-content {
   display: flex;
@@ -88,10 +88,11 @@ input::placeholder {
   outline: none;
   overflow: hidden;
   font-size: 15px;
+  cursor: pointer;
 }
 
 .btn-container button:hover {
-  transform: scale(1.05);
+  transform: scale(1.02);
   border-color: #fff9;
 }
 
