--- a/style/overlay.css
+++ b/style/overlay.css
@@ -1,40 +1,112 @@
-.overlay {
+.overlay-image {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 100%;
-}
-
-.overlay-image {
   position: absolute;
   top: 0;
   z-index: 900;
   width: 100%;
   height: 100%;
-  background-image: url("/assets/img/14633.jpg");
+  background-image: url("/assets/img/overlay-background-img.jpg");
   background-position: center;
   background-size: cover;
-  opacity: 0.6;
+  opacity: 0.9;
 }
 
-.overlay-content {
+.arrow {
+  width: 3rem;
+  cursor: pointer;
+}
+
+.card-overlay {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 350px;
+  height: 500px;
+  background-color: #ffe659;
+  border-radius: 8px;
+  overflow: hidden;
+  z-index: 2;
+  margin: 0 !important;
+  box-shadow: 0px 0px 18px white;
+}
+
+.card-content-overlay {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  margin: 9px;
+  gap: 10px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 8px;
+  filter: drop-shadow(0px 0px 1px black);
+}
+
+.card-head-overlay {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding-top: 12px;
+  color: white;
+  filter: drop-shadow(5px 5px 4px black);
+  font-size: larger;
+}
+
+.card-image-overlay {
+  border: 6px groove #c9c9ca;
+  border-radius: 9px;
+  filter: drop-shadow(9px 4px 7px black);
+  margin-top: 18px;
+  width: 80%;
+  height: 23vh;
+}
+
+.card-image-overlay img {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  top: 25%;
-  right: 25%;
-  bottom: 25%;
-  left: 25%;
-  z-index: 999;
-  width: 50%;
-  height: 50%;
-  background-color: rgb(31, 212, 212);
+  height: 100%;
 }
 
-.overlay-content img {
-  width: 3rem;
+.card-info-overlay {
+  width: 90%;
+  height: 100%;
+  padding-top: 36px;
+}
+
+.info-menu {
+  display: flex;
+  align-items: center;
+  color: white;
+  text-align: center;
+  filter: drop-shadow(5px 5px 4px black);
   cursor: pointer;
+}
+
+.info-content {
+  padding-top: 32px;
+  filter: drop-shadow(9px 4px 7px black);
+}
+
+.info-content img {
+  width: 6rem;
+}
+
+.box-animation {
+  animation: myAnim 1s ease-in-out 0s 1 normal forwards;
+}
+
+@keyframes myAnim {
+	0% {
+		opacity: 0;
+		transform: translateY(-50px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
 }
