--- a/style/overlay.css
+++ b/style/overlay.css
@@ -13,6 +13,13 @@
   opacity: 0.9;
 }
 
+.overlay-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10rem;
+}
+
 .arrow {
   width: 3rem;
   cursor: pointer;
