--- a/style.css
+++ b/style.css
@@ -1,10 +1,44 @@
 body {
+  display: flex;
   background-image: url("/assets/img/background-img.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: top; 
+  background-position: top;
   height: 100vh;
+}
+
+header {
+  width: 100%;
+}
+
+main {
+  flex: 1;
+  width: 100%;
+}
+
+#loading {
+  height: 100%;
+}
+
+.loader {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #181817;
+}
+
+.loader h1 {
+  color: white;
+  font-size: larger;
+  text-align: center;
+}
+
+.loader img {
+ height: 40%;
 }
 
 .header-main-content {
