--- a/style/overlay/evolution.css
+++ b/style/overlay/evolution.css
@@ -7,10 +7,10 @@
 }
 
 .box-animation {
-  animation: myAnim 1s ease-in-out 0s 1 normal forwards;
+  animation: myEvolution 1s ease-in-out 0s 1 normal forwards;
 }
 
-@keyframes myAnim {
+@keyframes myEvolution {
   0% {
     opacity: 0;
     transform: translateY(-50px);
