--- a/style/overlay/overlay-card.css
+++ b/style/overlay/overlay-card.css
@@ -4,6 +4,19 @@
   align-items: center;
   width: 50%;
   height: 50%;
+  animation: myOverlay 1s ease-in-out 0s 1 normal forwards;
+}
+
+@keyframes myOverlay {
+	0% {
+		transform: scale(0);
+		transform-origin: 50% 100%;
+	}
+
+	100% {
+		transform: scale(1);
+		transform-origin: 50% 100%;
+	}
 }
 
 .arrow {
