--- a/style.css
+++ b/style.css
@@ -5,15 +5,14 @@ html, body {
 body{
   display: flex;
   flex-direction: column;
-  background-color: black;
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  max-width: 1920px;
-  width: 100%;
+  min-height: 100vh;
+  background-image: url("/assets/img/background-img.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: top;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 header {
@@ -71,18 +70,16 @@ input::placeholder {
 }
 
 main {
-  display: flex;
-  background-image: url("/assets/img/background-img.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: top;
   width: 100%;
-  height: 100vh;
+  flex: 1 !important; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 #loading {
   width: 100%;
+  height: 100%;
 }
 
 .loader {
@@ -90,13 +87,12 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* width: 100%; */
   height: 100%;
   background-color: #181817;
 }
 
 .loader img {
- height: 20%;
+ height: 30%;
 }
 
 .loader h1 {
@@ -110,7 +106,7 @@ main {
   flex-wrap: wrap;
   padding: 20px 30px;
   gap: 18px;
-  animation: myContent 2s ease-in-out 0s 1 normal forwards;
+  animation: myContent 1s ease-in-out 0s 1 normal forwards;
 }
 
 @keyframes myContent {
@@ -189,4 +185,36 @@ main {
   to {
     left: 100%;
   };
+}
+
+footer {
+  display: flex;
+  justify-content: end;
+  width: 100%;
+  color: white;
+}
+
+footer img {
+  width: 32px;
+}
+
+.footer-info {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  width: 100%;
+  gap: 12px;
+  padding: 22px 20px;
+}
+
+.footer-info span {
+  font-family: verdana;
+  font-weight: bold;
+  font-style: italic;
+  font-variant: small-caps;
+  text-align: center;
+  font-size: 18px;
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
+  text-shadow: rgb(0, 0, 0) 2px 2px 2px;
 }
