--- a/style/overlay/overlay.css
+++ b/style/overlay/overlay.css
@@ -2,11 +2,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* position: absolute;
-  top: 0;
-  z-index: 900; */
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-image: url("/assets/img/overlay-background-img.jpg");
   background-position: center;
   background-size: cover;
