--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html, body {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body{
@@ -20,14 +21,10 @@ header {
 }
 
 .header-main-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding: 0 20px;
 }
 
 .headline-content {
-  display: flex;
   justify-content: center;
   flex: 1;
 }
@@ -46,7 +43,6 @@ header {
 }
 
 .input-content {
-  display: flex;
   align-items: center;
   gap: 9px;
 }
@@ -83,11 +79,7 @@ main {
 }
 
 .loader {
-  display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
   background-color: #181817;
 }
 
@@ -102,7 +94,6 @@ main {
 }
 
 .main-content {
-  display: flex;
   flex-wrap: wrap;
   padding: 20px 30px;
   gap: 18px;
@@ -138,6 +129,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
   color: #ffff;
   gap: 10px;
   font-weight: bold;
@@ -145,11 +137,10 @@ main {
   outline: none;
   overflow: hidden;
   font-size: 15px;
-  cursor: pointer;
 }
 
 .btn-container button:hover {
-  transform: scale(1.02);
+  transform: scale(1.05);
   border-color: #fff9;
 }
 
@@ -176,22 +167,21 @@ main {
 @keyframes shine {
   0% {
     left: -100px;
-  };
+  }
 
   60% {
     left: 100%;
-  };
+  }
 
   to {
     left: 100%;
-  };
+  }
 }
 
 footer {
   display: flex;
   justify-content: end;
   width: 100%;
-  color: white;
 }
 
 footer img {
@@ -199,7 +189,6 @@ footer img {
 }
 
 .footer-info {
-  display: flex;
   justify-content: end;
   align-items: center;
   width: 100%;
