--- a/style/overlay/moves.css
+++ b/style/overlay/moves.css
@@ -6,12 +6,9 @@
 }
 
 .move {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex: 1 1 calc(33.333% - 10px);
   box-sizing: border-box;
-  color: white;
+  background-color: lightslategray;
   border: 1px solid white;
   border-radius: 8px;
   padding: 4px;
