--- a/style/standard.css
+++ b/style/standard.css
@@ -1,7 +1,6 @@
 * {
   box-sizing: border-box;
   margin: 0 auto;
-  scroll-behavior: smooth;
 }
 
 .a {
@@ -29,8 +28,7 @@
 }
 
 .text-Color {
-  color: white;
-  filter: drop-shadow(5px 5px 4px black);
+  color: black;
 }
 
 .d-flex {
