--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 body{
-  display: flex;
+  display: flex !important;
   flex-direction: column;
   min-height: 100vh;
   background-image: url("/assets/img/background-img.jpg");
@@ -190,7 +190,7 @@ footer img {
   align-items: center;
   width: 100%;
   gap: 12px;
-  padding: 22px 20px;
+  padding: 10px 20px;
 }
 
 .footer-info span {
