--- a/style/cards/small-card.css
+++ b/style/cards/small-card.css
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   justify-content: center;
+  width: 235px;
   height: 335px;
   background-color: #ffe659;
   border-radius: 8px;
